--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -33,6 +33,7 @@ jobs:
           go-version-file: 'go.mod'
       # Lint go files with golangci-lint
       - name: Lint go files with golangci-lint
-        uses: golangci/golangci-lint-action@v6
+        uses: golangci/golangci-lint-action@v4
         with:
           version: latest
+          args: --timeout=10m
