--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -2,8 +2,12 @@ name: run all jobs
 on: push
 
 jobs:
-  lint:
-    uses: ./.github/workflows/lint.yml
+  migration:
+    uses: ./.github/workflows/migration.yml
 
-  test:
-    uses: ./.github/workflows/test.yml
+  # TODO tmp disable
+#  lint:
+#    uses: ./.github/workflows/lint.yml
+#
+#  test:
+#    uses: ./.github/workflows/test.yml
