chore: add verify-script for checking validator migration proofs (#218)

--- a/.github/workflows/all.yml
+++ b/.github/workflows/all.yml
@@ -2,6 +2,9 @@ name: run all jobs
 on: push
 
 jobs:
+  verify-migration-proofs:
+    uses: ./.github/workflows/migration.yml
+
   lint:
     uses: ./.github/workflows/lint.yml
 
