--- a/config.yml
+++ b/config.yml
@@ -172,6 +172,7 @@ genesis:
     stakers:
       params:
         commission_change_time: 10
+        multi_coin_refund_policy_admin_address: "kyve1jq304cthpx0lwhpqzrdjrcza559ukyy3zsl2vd"
     staking:
       params:
         bond_denom: tkyve
