--- a/docs/config.json
+++ b/docs/config.json
@@ -80,6 +80,19 @@
       }
     },
     {
+      "url": "./tmp-swagger-gen/kyve/liquid/v1beta1/query.swagger.json",
+      "operationIds": {
+        "rename": {
+          "Params": "LiquidParams"
+        }
+      },
+      "tags": {
+        "rename": {
+          "Query": "QueryLiquid"
+        }
+      }
+    },
+    {
       "url": "./tmp-swagger-gen/cosmos/auth/v1beta1/query.swagger.json",
       "operationIds": {
         "rename": {
